--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
   </head>
   <body>
     <h1>LaMorra Strong</h1>
-  <body>
+    <section class="">
+<img src=""/> 
+<section class="assign-det">
+<h2>Problem statement: [title]</h2> 
+  <p>
+[Insert the text of your problem statement here]
+ </p>
+</section> 
+    </section> 
+    <body>
   </html>
