--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>LaMorra Strong</h1>
     <section class="">
-<img src=""/> 
+<img src="https://github.com/PeteyS17/PeteyS17.github.io/blob/main/Screenshot%202023-09-06%20124331.pdf/> 
 <section class="assign-det">
 <h2>Problem statement: [title]</h2> 
   <p>
