--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <h1>LaMorra Strong</h1>
-    <section class="">
+    <section class="assign">
 <img src="https://github.com/PeteyS17/PeteyS17.github.io/blob/main/Screenshot%202023-09-06%20124331.pdf/> 
 <section class="assign-det">
-<h2>Problem statement: [title]</h2> 
+<h2>Problem statement: [Digital Keys]</h2> 
   <p>
-[Insert the text of your problem statement here]
+[Students keep losing thier physical keys to their dorms and other things.]
  </p>
 </section> 
     </section> 
