--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>LaMorra Strong</h1>
     <section class="assign"/>
-<img src="https://github.com/PeteyS17/PeteyS17.github.io/blob/main/Screenshot%202023-09-06%20124331.pdf/> 
+<img src="Problem Statement.png/> 
 <section class="assign-det"/>
 <h2>Problem statement: [Digital Keys]</h2> 
   <p>
