--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>CSCE 190: LaMorra Strong</title>
   </head>
   <body>
-    <h1>LaMorra Strong</h1>
+    <h1>[LaMorra Strong]</h1>
     <section class="assign"/>
-<img src="Problem Statement.jpg"/>
+<img src="Problem Statement.jpg" />
 <section class="assign-det"/>
 <h2>Problem statement: [Digital Keys]</h2> 
   <p>
