--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 [Students keep losing thier physical keys to their dorms and other things.]
  </p>
 </section> 
+      <section>
+        <img src="Affinity Diagram.pdf" />
     </section> 
     <body>
   </html>
