--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 [Students keep losing thier physical keys to their dorms and other things.]
  </p>
 </section> 
-      <section>
-        <img src="Affinity Diagram.pdf" />
+    <!-- Affinity diagram-->
+      <section class="assign"/>
+        <img src="Affinity Diagram.jpg" />
+        <section class="assign-det"/>
+          <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
+          <p>
+            [Insert text describing your diagram]
+          </p>
     </section> 
+      </section>
     <body>
   </html>
