--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <section class="assign"/>
         <img src="Affinity Diagram.jpg" />
         <section class="assign-det"/>
-          <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
+          <a href="files/affinity-diagram.pdf.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
           <p>
-            [Insert text describing your diagram]
+            [This diagram showcases several ideas that would help combat the issue of students losing ther physical keys to their dorms and other items.]
           </p>
     </section> 
       </section>
