--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="assign"/>
         <img src="Affinity Diagram.jpg" />
         <section class="assign-det"/>
-          <a href="files/affinity-diagram.pdf.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
+          <a href="affinity-diagram.pdf.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
           <p>
             [This diagram showcases several ideas that would help combat the issue of students losing ther physical keys to their dorms and other items.]
           </p>
