--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>CSCE 190: LaMorra Strong</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <h1>[LaMorra Strong]</h1>
