--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
           </p>
     </section> 
       </section>
+      <!-- Personas assignment -->
+      <section class="assign">
+        <img src=""
+      </section>
     <body>
   </html>
