--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 [Students keep losing thier physical keys to their dorms and other things.]
  </p>
 </section> 
+    </section>
+    <body>
+    </html>
     <!-- Affinity diagram-->
       <section class="assign"/>
         <img src="Affinity Diagram.jpg" />
