--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>[LaMorra Strong]</h1>
     <section class="assign"/>
-<img src=images/ "Problem Statement.jpg" />
+<img src="Problem Statement.jpg" />
 <section class="assign-det"/>
 <h2>Problem statement: [Digital Keys]</h2> 
   <p>
