--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>[LaMorra Strong]</h1>
     <section class="assign"/>
-<img src="Problem Statement.jpg" />
+<img src="images/Problem Statement.jpg" />
 <section class="assign-det"/>
 <h2>Problem statement: [Digital Keys]</h2> 
   <p>
@@ -19,7 +19,7 @@
     </html>
     <!-- Affinity diagram-->
       <section class="assign"/>
-        <img src="Affinity Diagram.jpg" />
+        <img src="images/Affinity Diagram.jpg" />
         <section class="assign-det"/>
           <a href="Affinity Diagram.pdf"/><h2>Affinity Diagram: [Digital Keys]</h2></a>
           <p>
