--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="assign"/>
         <img src="images/Affinity Diagram.jpg" />
         <section class="assign-det"/>
-          <a href="Affinity Diagram.pdf"/><h2>Affinity Diagram: [Digital Keys]</h2></a>
+          <a href="Affinity Diagram.pdf"><h2>Affinity Diagram: [Digital Keys]</h2></a>
           <p>
             [This diagram showcases several ideas that would help combat the issue of students losing ther physical keys to their dorms and other items.]
           </p>
