--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
           </p>
     </section> 
       </section>
-      <!-- Personas assignment -->
+      <!-- Personas assignment --> 
       <section class="assign">
-        <img src=""
+<img src="images/persona.png" /> 
+        <section class="assign-det">
+<a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a> 
+          <p>
+[Chelsea Dion, "There's a smarter way for everything."] 
+          </p>
+</section> 
       </section>
     <body>
   </html>
