--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </section>
       <!-- Personas assignment --> 
       <section class="assign">
-<img src="images/persona.png" /> 
+<img src="images/Persona.jpg" /> 
         <section class="assign-det">
-<a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a> 
+<a href="Persona.pdf"><h2>Team Personas: [title]</h2></a> 
           <p>
 [Chelsea Dion, "There's a smarter way for everything."] 
           </p>
