--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </section>
       <!-- Storyboardd --> 
       <section class="assign">
-<img src="images/" /> 
+<img src="images/storyboard.jpg" /> 
         <section class="assign-det">
-<a href="images/f"><h2>Team Storyboard: [Digital Keys]</h2></a> 
+<a href="images/combined"><h2>Team Storyboard: [Digital Keys]</h2></a> 
           <p>
 "] 
     <body>
