--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <section class="assign-det">
 <a href="images/combinepdf(3).pdf"><h2>Team Storyboard: [Digital Keys]</h2></a> 
           <p>
-"] 
+[Chelsea Dion Storyboard.]
+          </p>
+          </section> 
+      </section>
     <body>
   </html>
