--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="assign">
 <img src="images/Persona.jpg" /> 
         <section class="assign-det">
-<a href="images/combinepdf.pdf"><h2>Team Personas: [Digital Keys]</h2></a> 
+<a href="combinepdf.pdf"><h2>Team Personas: [Digital Keys]</h2></a> 
           <p>
 [Chelsea Dion, "There's a smarter way for everything."] 
           </p>
