--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <!-- Storyboardd --> 
       <section class="assign">
-<img src="images/storyboard.jpg" /> 
+<img src="images/Storyboard.jpg" /> 
         <section class="assign-det">
 <a href="images/combinepdf (3).pdf"><h2>Team Storyboard: [Digital Keys]</h2></a> 
           <p>
