--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="assign">
 <img src="images/Sketch.jpg" /> 
         <section class="assign-det">
-<a href="files/all-sketches.pdf"><h2>Team Sketches: [title]</h2></a> 
+<a href="all-sketches.pdf"><h2>Team Sketches: [title]</h2></a> 
           <p>
 [Insert text describing your team sketches]
 </p>
