--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="assign-det">
 <a href="all-sketches.pdf"><h2>Team Sketches: [Sketches]</h2></a> 
           <p>
-[Insert text describing your team sketches]
+[Team sketches for our app "Da-Loc".]
 </p>
 </section> 
       </section>
