--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="assign">
 <img src="images/Sketch.jpg" /> 
         <section class="assign-det">
-<a href="all-sketches.pdf"><h2>Team Sketches: [Sketches]</h2></a> 
+<a href="all-sketches.pdf"><h2>Team Sketches: [Digital Keys]</h2></a> 
           <p>
 [Team sketches for our app "Da-Loc".]
 </p>
