--- a/index.html
+++ b/index.html
@@ -57,5 +57,15 @@
 </p>
 </section> 
       </section>
+      <!-- Paper prototype assignment --> 
+      <section class="assign">
+<img src="images/team-prototype.png" /> 
+        <section class="assign-det">
+<a href="https://www.youtube.com/watch?v=n37xmLzwNvM"><h2>Team Paper Prototype: [title]</h2></a> 
+          <p>
+[Insert text describing your team paper prototype]
+          </p>
+</section>
+      </section>
       <body>
   </html>
