--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       <section class="assign">
 <img src="images/team-prototype.png" /> 
         <section class="assign-det">
-<a href="https://www.youtube.com/watch?v=n37xmLzwNvM"><h2>Team Paper Prototype: [title]</h2></a> 
+<a href="https://www.youtube.com/watch?v=n37xmLzwNvM"><h2>Team Paper Prototype: [Digital Keys]</h2></a> 
           <p>
-[Insert text describing your team paper prototype]
+[Here is our teams paper prototype picture as well as a youtube video of it.]
           </p>
 </section>
       </section>
