--- a/index.html
+++ b/index.html
@@ -61,11 +61,20 @@
       <section class="assign">
 <img src="images/team-prototype.png" /> 
         <section class="assign-det">
-<a href="https://www.youtube.com/watch?v=n37xmLzwNvM"><h2>Team Paper Prototype: [Digital Keys]</h2></a> 
+<a href="https://www.youtube.com/watch?v=n37xmLzwNvM"><h2>Team Paper Prototype: [DaLoc Paper Prototype]</h2></a> 
           <p>
 [Here is our teams paper prototype picture as well as a youtube video of it.]
           </p>
 </section>
       </section>
+      <!-- Hi-Fi prototype assignment --> 
+      <section class="assign">
+<img src="images/team-prototype.png" /> 
+        <section class="assign-det">
+<a href="https://www.youtube.com/watch?v=HMlJzmRb_3g"><h2>Team Hi-Fi Prototype: [DaLoc]</h2></a>
+          <p>
+[Video showcasing the features of the new and improved DaLoc, a tracking/house security app.] 
+          </p>
+</section> </section>
       <body>
   </html>
