--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <!-- Hi-Fi prototype assignment --> 
       <section class="assign">
-<img src="images/team-prototype.png" /> 
+<img src="images/team-HiFiprototype.png" /> 
         <section class="assign-det">
 <a href="https://www.youtube.com/watch?v=HMlJzmRb_3g"><h2>Team Hi-Fi Prototype: [DaLoc]</h2></a>
           <p>
