--- a/csce242/examples/html/index.html
+++ b/csce242/examples/html/index.html
@@ -4,21 +4,35 @@
         <title>Pandas</title>
     </head>
     <body>
-        <h1>I love Pandas</h1>
+        <h1>I &hearts; Pandas</h1>
         <h2>Info about Pandas</h2>
 
-        <p>Pudding powder fruitcake lemon drops topping pastry carrot cake ice cream cake. I love cake cake tart sweet roll croissant. Shortbread soufflé marzipan marshmallow powder I love brownie sweet cake. </p>
-        <p> Soufflé gingerbread dragée pastry sugar plum I love cupcake. Jujubes apple pie topping brownie apple pie I love dragée. Bonbon cake croissant croissant jelly-o bear claw bonbon. Tart jelly-o shortbread liquorice I love.</p>
-        <img src="images/panda.jpeg" alt="Panda" />
+        <p><b> powder</b> fruitcake lemon drops topping pastry carrot cake ice cream cake. I love cake cake tart sweet roll croissant. Shortbread soufflé marzipan marshmallow powder I love brownie sweet cake. </p>
+        
+    <p> Soufflé gingerbread dragée pastry sugar plum I love cupcake. Jujubes apple pie topping brownie apple pie I love dragée. Bonbon cake croissant croissant jelly-o bear claw bonbon. Tart jelly-o shortbread liquorice I love.</p>
+        
+    I love images
+    <img src="images/panda.jpeg" alt="Panda" />
+Still loving
+
         <h3> Facts about Pandas</h3>
         <ol>
             <li> Pandas are native to China.</li>
             <li> Pandas eat bamboo.</li>
             <li> Pandas are black and white.</li>
         </ol>
-        <p>
-            Read here for more Pand Facts
-            <a href="https://en.wikipedia.org/wiki/Giant_panda">Panda Info</a>
-        </p>
-    </body>
+        <p> Read here for more Panda Facts</p>
+            <p><a href="https://en.wikipedia.org/wiki/Giant_panda">Panda Info</a></p>
+     <h3> Bears of the world!</h3>
+     <table>
+        <tr>
+            <th>Type</th>
+            ,<th>Description</th>
+        </tr>
+        <tr>
+            <td>Polar</td>
+            <td> Polar bears live in the Artic and are apex predators that prey on seals.</td>
+        </tr>
+     </table>
+        </body>
 </html>
