--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,1 +1,12 @@
-hello Petey
+<!DOCTYPE html>
+<html lang="en"></html>
+<head>
+    <title> CSCE 242: La'Morra Strong</title>
+</head>
+<body>
+    <h1>Hello  </h1>
+    <ol>
+        <li><a href="assignments/01html/index.html"> Basic HTML</a></li>
+    </ol>
+</body>
+</html>
