--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,7 +4,8 @@
     <title> CSCE 242: La'Morra Strong</title>
 </head>
 <body>
-    <h1>Hello  </h1>
+    <h1>CSCE 242: Web Applications  </h1>
+    <h2>La'Morra Strong</h2>
     <ol>
         <li><a href="assignments/01html/index.html"> Basic HTML</a></li>
     </ol>
