added ol for assignments

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -6,6 +6,8 @@
 <body>
     <h1>CSCE 242: Web Applications  </h1>
     <h2>La'Morra Strong</h2>
+    <p> </p>
+    <h2> Assignments</h2>
     <ol>
         <li><a href="assignments/01html/index.html"> Basic HTML</a></li>
     </ol>
