started basic html

--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -1,1 +1,7 @@
-I'm assignment 1
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Airplanes </title>
+    <!-- csce242 LaMorra Strong -->
+    </head>
+</html>
