start of the body

--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
     <head>
         <title>Airplanes </title>
-    <!-- csce242 LaMorra Strong -->
+   
     </head>
+    <body>
+         <!-- csce242 LaMorra Strong -->
+          <h1> I &hearts; Airplanes </h1>
+
+          <p> Modern comercial airplanes are the backbone of global travel and trade.
+            With the ability to carry hundreds of passengers across continents in just a 
+            few hours, they   </p>
+    </body>
 </html>
