added two paragraphs

--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -5,11 +5,25 @@
    
     </head>
     <body>
-         <!-- csce242 LaMorra Strong -->
+          csce242 LaMorra Strong <!-- csce242 LaMorra Strong --> 
           <h1> I &hearts; Airplanes </h1>
-
+          <h2> Info about Modern Aviation</h2>
           <p> Modern comercial airplanes are the backbone of global travel and trade.
             With the ability to carry hundreds of passengers across continents in just a 
-            few hours, they   </p>
+            few hours, they have truly transformed the way we live. From wide-body 
+            jets like the Boeing 787 Dreamliner to the Airbus A350, todays airplanes are 
+            marvels of engineering and design. They combine safety, efficiency, and comfort 
+            to make air travel more accessible than ever before.</p>
+            
+            <p> Commercial planes today use advanced technology to reduce fuel consumption, 
+                improve aerodynamics, and increase passenger comfort. Airlines are constantly 
+                updating their fleets to newer, more efficient models that produce fewer 
+                emissions. Features such as quieter engines, larger windows, and improved cabin 
+                layouts make flying a smoother experience. Airplanes have become an essential 
+                part of the modern world, connecting people, economies, and cultures.</p>
+                <!--Images-->
+                <h2> Modern Commercial Airplanes</h2>
+
+
     </body>
 </html>
