--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -28,6 +28,38 @@
                 
                 <img src="images/boeing 757.jpeg" alt="Boeing 757" />
 
+                <!-- List -->
+    <h2>Why I Love Modern Airplanes</h2>
+    <ul>
+        <li>They make global travel fast and safe</li>
+        <li>They feature advanced technology and design</li>
+        <li>They connect people and cultures across the world</li>
+    </ul>
+
+    <!-- Table -->
+    <h2>Popular Modern Commercial Airplanes</h2>
+    <table >
+        <tr>
+            <th>Airplane Model</th>
+            <th>Manufacturer</th>
+            <th>Main Use</th>
+        </tr>
+        <tr>
+            <td>Boeing 787 Dreamliner</td>
+            <td>Boeing</td>
+            <td>Long-haul passenger flights</td>
+        </tr>
+        <tr>
+            <td>Airbus A350</td>
+            <td>Airbus</td>
+            <td>Long-distance travel with high efficiency</td>
+        </tr>
+        <tr>
+            <td>Boeing 737 MAX</td>
+            <td>Boeing</td>
+            <td>Short and medium-haul flights</td>
+        </tr>
+    </table>
 
     </body>
 </html>
