added bold to the body

--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -8,7 +8,7 @@
           <!-- csce242 LaMorra Strong --> 
           <h1> I &hearts; Airplanes </h1>
           <h2> Info about Modern Aviation</h2>
-          <p> Modern comercial airplanes are the backbone of global travel and trade.
+          <p> <b>Modern comercial airplanes</b> are the backbone of global travel and trade.
             With the ability to carry hundreds of passengers across continents in just a 
             few hours, they have truly transformed the way we live. From wide-body 
             jets like the Boeing 787 Dreamliner to the Airbus A350, todays airplanes are 
