class css example

--- a/csce242/examples/css/index.html
+++ b/csce242/examples/css/index.html
@@ -6,10 +6,25 @@
     </head>
 
     <body>
-<div>
+<div id="content">
     <h1>Best Blue Whales</h1>
     <h2>Man They're Cool</h2>
     <p>Soufflé gingerbread dragée pastry sugar plum I love cupcake. Jujubes apple pie topping brownie apple pie I love dragée. Bonbon cake croissant croissant jelly-o bear claw bonbon. Tart jelly-o shortbread liquorice I love.</p>
+    <img id="whale-pic" src="images/bluewhale.jpeg" alt="Whales">
+<table>
+    <tr>
+        <th> Name</th>
+        <th> Description</th>
+    </tr>
+    <tr>
+        <td> James</td>
+        <td> Short</td>
+    </tr>
+    <tr> 
+        <td> ola</td>
+        <td> likes cars</td>
+    </tr>
+</table>
 </div>
 
     </body>
