--- a/csce242/index.html
+++ b/csce242/index.html
@@ -7,9 +7,18 @@
     <h1>CSCE 242: Web Applications  </h1>
     <h2>La'Morra Strong</h2>
     <p> Introduction to designing and developing web applications using HTML, CSS, and JavaScript. </p>
+
+    /*GitHub Repo Link*/
+     <p>
+    <a href="https://github.com/PeteyS17/PeteyS17.github.io/tree/main/csce242">
+        View My GitHub Repository
+    </a>
+    </p>
+
     <h2> Assignments</h2>
     <ol>
         <li><a href="assignments/01html/index.html"> Basic HTML</a></li>
+        <li><a href="assignments/css/index.html">Basic CSS</a></li>
     </ol>
 </body>
 </html>
