--- a/csce242/index.html
+++ b/csce242/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <h1>CSCE 242: Web Applications</h1>
-        <h2>La'Morra Strong</h2>
+        <h2>La'Moa Strong</h2>
         <p>Introduction to designing and developing web applications using HTML, CSS, and JavaScript.</p>
         <p>
             <a href="https://github.com/PeteyS17/PeteyS17.github.io/tree/main/csce242">
