--- a/csce242/examples/html/index.html
+++ b/csce242/examples/html/index.html
@@ -7,9 +7,9 @@
         <h1>I &hearts; Pandas</h1>
         <h2>Info about Pandas</h2>
 
-        <p><b> powder</b> fruitcake lemon drops topping pastry carrot cake ice cream cake. I love cake cake tart sweet roll croissant. Shortbread soufflé marzipan marshmallow powder I love brownie sweet cake. </p>
+        <p><b> powder</b> fruitcake lemon drops topping pastry carrot cake ice cream cakSoufflé gingerbread dragée pastry sugar plum I love cupcake. Jujubes apple pie topping brownie apple pie I love dragée. Bonbon cake croissant croissant jelly-o bear claw bonbon. Tart jelly-o shortbread liquorice I love.</p>e. I love cake cake tart sweet roll croissant. Shortbread soufflé marzipan marshmallow powder I love brownie sweet cake. </p>
         
-    <p> Soufflé gingerbread dragée pastry sugar plum I love cupcake. Jujubes apple pie topping brownie apple pie I love dragée. Bonbon cake croissant croissant jelly-o bear claw bonbon. Tart jelly-o shortbread liquorice I love.</p>
+    <p> 
         
     I love images
     <img src="images/panda.jpeg" alt="Panda" />
