--- a/csce242/examples/flex/index.html
+++ b/csce242/examples/flex/index.html
@@ -18,7 +18,16 @@
                     </ul>
                 </nav>
                 </header>
-                <main id="main-content">
+                <main id="main-content" class="columns">
+                    <section>
+                        
+                    </section>
+                    <aside>
+                        <h3>Secondary Nav</h3>
+                        <nav>
+                           
+                        </nav>
+                    </aside>
 
                 </main>
                 <footer id="main-footer">
