--- a/csce242/index.html
+++ b/csce242/index.html
@@ -38,9 +38,9 @@
 
             <!-- Assignment 3-->
             <div class="card">
-                <img src="images/di.png" alt="Page Layout Screenshot">
+                <img src="images/pagelayout.png" alt="Page Layout Screenshot">
                 <div class="card-content">
-                    <h3><a href="assignments/03layout/index.html">Assignment 3: Page Layout</a></h3>
+                    <h3><a href="assignments/03pagelayout/index.html">Assignment 3: Page Layout</a></h3>
                     <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
                 </div>
             </div>
