--- a/csce242/index.html
+++ b/csce242/index.html
@@ -45,10 +45,32 @@
                 </div>
             </div>
         </div>
+
+        <!-- Projects Section -->
+        <h2 id="projects">Projects</h2>
+        <div class="projects">
+            <!-- Project Step 1 -->
+            <div class="card">
+                <img src="images/topic.png" alt="PDF Icon">
+                <div class="card-content">
+                    <h3><a href="projects/part1/BeyondBorders.pdf" target="_blank">Step 1: Topic Proposal </a></h3>
+                    <p>For this part 1 choose to do a travel guru proposal</p>
+                </div>
+            </div>
+
+            <!-- Project Step 2 -->
+            <div class="card">
+                <img src="images/wireframe.png" alt="Wireframe Screenshot">
+                <div class="card-content">
+                    <h3>Step 2: Wireframe</h3>
+                    <p>Here is the embedded wireframe for my project.</p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
-
+<p>&copy; PeteyS17.github.io </p>
     </footer>
 
 </body>
