--- a/csce242/index.html
+++ b/csce242/index.html
@@ -60,9 +60,9 @@
 
             <!-- Project Step 2 -->
             <div class="card">
-                <img src="images/wireframe.png" alt="Wireframe Screenshot">
+                <img src="images/mockitt.png" alt="Wireframe Screenshot">
                 <div class="card-content">
-                    <h3>Step 2: Wireframe</h3>
+                    <h3><a href="projects/wireframes/index.html" target="_blank">Step 2: Wireframe</a></h3>
                     <p>Here is the embedded wireframe for my project.</p>
                 </div>
             </div>
