--- a/csce242/index.html
+++ b/csce242/index.html
@@ -44,7 +44,16 @@
                     <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
                 </div>
             </div>
+            <!-- Assignment 4-->
+            <div class="card">
+                <img src="images/pagelayout.png" alt="recreate css">
+                <div class="card-content">
+                    <h3><a href="assignments/04recreatecss/">Assignment 4: Recreate CSS</a></h3>
+                    <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
+                </div>
+            </div>
         </div>
+
 
         <!-- Projects Section -->
         <h2 id="projects">Projects</h2>
