update main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Assignment 4-->
             <div class="card">
-                <img src="images/pagelayout.png" alt="recreate css">
+                <img src="images/4.png" alt="recreate css">
                 <div class="card-content">
                     <h3><a href="assignments/04recreatecss/">Assignment 4: Recreate CSS</a></h3>
                     <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
