--- a/csce242/index.html
+++ b/csce242/index.html
@@ -69,7 +69,7 @@
 
             <!-- Project Step 2 -->
             <div class="card">
-                <img src="images/mockitt.png" alt="Wireframe Screenshot">
+                <img src="images/Mockitt2.png" alt="Wireframe Screenshot">
                 <div class="card-content">
                     <h3><a href="projects/wireframes/index.html" target="_blank">Step 2: Wireframe</a></h3>
                     <p>Here is the embedded wireframe for my project.</p>
