part 3 and assignmrnt 5

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -52,6 +52,14 @@
                     <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
                 </div>
             </div>
+            <!-- Assignment 5-->
+            <div class="card">
+                <img src="images/HTML.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/05javascript/index.html">Assignment 5: JavaScript</a></h3>
+                    <p>This assignment </p>
+                </div>
+            </div>
         </div>
 
 
@@ -73,6 +81,14 @@
                 <div class="card-content">
                     <h3><a href="projects/wireframes/index.html" target="_blank">Step 2: Wireframe</a></h3>
                     <p>Here is the embedded wireframe for my project.</p>
+                </div>
+            </div>
+            <!-- Project Step 3 -->
+            <div class="card">
+                <img src="images/Mockitt2.png" alt="Wireframe Screenshot">
+                <div class="card-content">
+                    <h3><a href="projects/part3/index.html" target="_blank">Step 3: HTML and CSS</a></h3>
+                    <p>Here is the html and css for my project.</p>
                 </div>
             </div>
         </div>
