update part 3 on main page

--- a/csce242/assignments/05javascript/index.html
+++ b/csce242/assignments/05javascript/index.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer class="page-footer">
-    <p>Each image and the title link to your main page. Replace the URL before submitting.</p>
+    <p>&copy; PeteyS17.github.io </p>
   </footer>
 
   <script src="js/app.js"></script>
