--- a/csce242/index.html
+++ b/csce242/index.html
@@ -54,10 +54,10 @@
             </div>
             <!-- Assignment 5-->
             <div class="card">
-                <img src="images/HTML.png" alt="Basic HTML Screenshot">
+                <img src="images/05.png" alt="Basic HTML Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/05javascript/index.html">Assignment 5: JavaScript</a></h3>
-                    <p>This assignment </p>
+                    <p>This assignment was the start of me using JavaScript </p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             </div>
             <!-- Project Step 3 -->
             <div class="card">
-                <img src="images/Mockitt2.png" alt="Wireframe Screenshot">
+                <img src="images/part3.png" alt="Wireframe Screenshot">
                 <div class="card-content">
                     <h3><a href="projects/part3/index.html" target="_blank">Step 3: HTML and CSS</a></h3>
                     <p>Here is the html and css for my project.</p>
