--- a/csce242/index.html
+++ b/csce242/index.html
@@ -60,6 +60,14 @@
                     <p>This assignment was the start of me using JavaScript </p>
                 </div>
             </div>
+            <!-- Assignment 6-->
+            <div class="card">
+                <img src="images/assignment06.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/06conditionals/index.html">Assignment 5: Conditionals</a></h3>
+                    <p>This assignment was me using JavaScript to make a Digital clock and flower lifeline </p>
+                </div>
+            </div>
         </div>
 
 
@@ -89,6 +97,14 @@
                 <div class="card-content">
                     <h3><a href="projects/part3/index.html" target="_blank">Step 3: HTML and CSS</a></h3>
                     <p>Here is the html and css for my project.</p>
+                </div>
+            </div>
+            <!-- Project Step 4 -->
+            <div class="card">
+                <img src="images/part4.png" alt="Colors, Pictures, and Text Screenshot">
+                <div class="card-content">
+                    <h3><a href="projects/part4/index.html" target="_blank">Step 4: Colors, Pictures, and Text</a></h3>
+                    <p>Here is the Colors, Pictures, and Text for my project.</p>
                 </div>
             </div>
         </div>
