This is the feedback from part 3

--- a/csce242/projects/part4/destinations.html
+++ b/csce242/projects/part4/destinations.html
@@ -8,27 +8,35 @@
 <body>
   <div id="content">
     <header>
-        <div class="header-bar">
-            <div class="logo">
-                <img src="images/bblogo.png" alt="Beyond Boarders Logo" />
-              </div>
-            <h1>Beyond Boarders</h1>
-            <div class="profile">
-              <img src="images/profile.jpeg" alt="Profile" />
-              <p class="profile-name">Petey</p>
+      <div class="header-bar">
+          <div class="logo">
+              <img src="images/bblogo.png" alt="Beyond Boarders Logo" />
             </div>
+          <h1>Beyond Boarders</h1>
+          <div class="profile">
+            <img src="images/profile.jpeg" alt="Profile" />
+            <p class="profile-name">Petey</p>
           </div>
-      <nav id="main-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="activities.html">Activities & Attractions</a></li>
-          <li><a href="blog.html">Travel Blog</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-        </ul>
-      </nav>
-    </header>
+        </div>
+        <!-- Hamburger toggle -->
+<input type="checkbox" id="nav-toggle" class="nav-toggle" />
+<label for="nav-toggle" id="toggle-nav">
+  <div></div>
+  <div></div>
+  <div></div>
+</label>
 
+<!-- Main Nav -->
+<nav id="main-nav">
+  <ul class="columns hide-small">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="destinations.html">Destinations</a></li>
+    <li><a href="activities.html">Activities & Attractions</a></li>
+    <li><a href="blog.html">Travel Blog</a></li>
+    <li><a href="about-us.html">About Us</a></li>
+  </ul>
+</nav>
+</header>
 
     <main>
       
