--- a/csce242/projects/part4/about-us.html
+++ b/csce242/projects/part4/about-us.html
@@ -18,16 +18,25 @@
               <p class="profile-name">Petey</p>
             </div>
           </div>
-      <nav id="main-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="activities.html">Activities & Attractions</a></li>
-          <li><a href="blog.html">Travel Blog</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-        </ul>
-      </nav>
-    </header>
+          <!-- Hamburger toggle -->
+  <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+  <label for="nav-toggle" id="toggle-nav">
+    <div></div>
+    <div></div>
+    <div></div>
+  </label>
+
+  <!-- Main Nav -->
+  <nav id="main-nav">
+    <ul class="columns hide-small">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="destinations.html">Destinations</a></li>
+      <li><a href="activities.html">Activities & Attractions</a></li>
+      <li><a href="blog.html">Travel Blog</a></li>
+      <li><a href="about-us.html">About Us</a></li>
+    </ul>
+  </nav>
+</header>
 
     <main>
       <!-- About section -->
