--- a/csce242/index.html
+++ b/csce242/index.html
@@ -64,8 +64,16 @@
             <div class="card">
                 <img src="images/assignment06.png" alt="Basic HTML Screenshot">
                 <div class="card-content">
-                    <h3><a href="assignments/06conditionals/index.html">Assignment 5: Conditionals</a></h3>
+                    <h3><a href="assignments/06conditionals/index.html">Assignment 6: Conditionals</a></h3>
                     <p>This assignment was me using JavaScript to make a Digital clock and flower lifeline </p>
+                </div>
+            </div>
+            <!-- Assignment 7-->
+            <div class="card">
+                <img src="images/loops1.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/07loops/loops.html">Assignment 7: Loops</a></h3>
+                    <p>This assignment was me using loops to make a day and night scene  </p>
                 </div>
             </div>
         </div>
