--- a/csce242/projects/part4/index.html
+++ b/csce242/projects/part4/index.html
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-        <p> &copy; PeteyS17.github.io     2025 Beyond Boarders .</p>
+        <p> &copy; PeteyS17.github.io     2025 Beyond Boarders </p>
     </footer>
   </div>
 </body>
