arrays and part5

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -76,6 +76,14 @@
                     <p>This assignment was me using loops to make a day and night scene  </p>
                 </div>
             </div>
+            <!-- Assignment 8-->
+            <div class="card">
+                <img src="images/assignment8.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/07loops/loops.html">Assignment 7: Loops</a></h3>
+                    <p>This assignment was me using arrays for a hamster and gerbil Adoption.  </p>
+                </div>
+            </div>
         </div>
 
 
@@ -113,6 +121,14 @@
                 <div class="card-content">
                     <h3><a href="projects/part4/index.html" target="_blank">Step 4: Colors, Pictures, and Text</a></h3>
                     <p>Here is the Colors, Pictures, and Text for my project.</p>
+                </div>
+            </div>
+            <!-- Project Step 5 -->
+            <div class="card">
+                <img src="images/part5.png" alt="Fixing up Website">
+                <div class="card-content">
+                    <h3><a href="projects/part5/index.html" target="_blank">Step 5: Fixing Up Website</a></h3>
+                    <p>fixing up my Website.</p>
                 </div>
             </div>
         </div>
