--- a/csce242/assignments/08arrays/arrays.html
+++ b/csce242/assignments/08arrays/arrays.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
- 
-        <title>Assignment 8 — Arrays</title>
-        <link rel="stylesheet" href="styles.css" />
-      </head>
-    <body> 
-        <div id="content"></div>
-    </body>
+<head>
+
+  <title>Assignment 8 – Hamster & Gerbil Adoption</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h1>Assignment 8 - Hamster & Gerbil Adoption</h1>
+  <h2>Arrays</h2>
+
+  <main id="gallery" class="grid"></main>
+
+  <!-- Popup -->
+  <section id="popup" class="popup hidden" aria-hidden="true">
+    <div class="popup-backdrop" data-close></div>
+    <div class="popup-card">
+      <header class="popup-header">
+        <h3 id="popup-title"></h3>
+        <span id="close" class="close">&#10006;</span>
+      </header>
+      <div class="popup-body">
+        <img id="popup-img" alt="" />
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>@PeteyS17</p>
+  </footer>
+
+  <script src="js/arrays.js"></script>
+</body>
+</html>
