--- a/csce242/index.html
+++ b/csce242/index.html
@@ -80,8 +80,16 @@
             <div class="card">
                 <img src="images/assignment8.png" alt="Basic HTML Screenshot">
                 <div class="card-content">
-                    <h3><a href="assignments/07loops/loops.html">Assignment 7: Loops</a></h3>
+                    <h3><a href="assignments/08arrays/arrays.html">Assignment 8: Arrays</a></h3>
                     <p>This assignment was me using arrays for a hamster and gerbil Adoption.  </p>
+                </div>
+            </div>
+            <!-- Assignment 9-->
+            <div class="card">
+                <img src="images/ass09.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/09classes/index.html">Assignment 9: classes</a></h3>
+                    <p>This assignment was me using classes with art paintings  </p>
                 </div>
             </div>
         </div>
