add/remove some changes

--- a/csce242/projects/part6/activities.html
+++ b/csce242/projects/part6/activities.html
@@ -47,7 +47,7 @@
 
       <section class="gallery columns">
         <a class="tile tile--link" href="chicago.html#attractions">
-          <img src="images/the lourve.jpeg" alt="Museum glass pyramid at dusk" loading="lazy">
+          <img src="images/the-lourve.jpeg" alt="Museum glass pyramid at dusk" loading="lazy">
           <p>World Museum (Culture)</p>
         </a>
         <div class="tile">
