tried to fix issue aka failed

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -139,6 +139,14 @@
                     <p>fixing up my Website.</p>
                 </div>
             </div>
+            <!-- Project Step 6 -->
+            <div class="card">
+                <img src="images/part6.png" alt="Fixing up Website">
+                <div class="card-content">
+                    <h3><a href="projects/part6/index.html" target="_blank">Step 6: JSON Parsing</a></h3>
+                    <p>fixing up my Website.</p>
+                </div>
+            </div>
         </div>
     </main>
 
