--- a/csce242/index.html
+++ b/csce242/index.html
@@ -92,6 +92,26 @@
                     <p>This assignment was me using classes with art paintings  </p>
                 </div>
             </div>
+
+            <!-- Assignment 10-->
+            <div class="card">
+                <img src="images/ass09.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/09classes/index.html">Assignment 10: Hello World</a></h3>
+                    <a href="https://github.com/PeteyS17/server-helloworld#"> Code Repo</a>
+                    <a href="https://server-helloworld-iit2.onrender.com"> Live Demo</a>
+                </div>
+            </div>
+
+            <!-- Assignment 10-->
+            <div class="card">
+                <img src="images/Screenshot 2025-10-16 at 12.11.19 PM.png" alt="Basic HTML Screenshot">
+                <div class="card-content">
+                    <h3><a href="assignments/09classes/index.html">Setup 2: Hello World</a></h3>
+                    <a href="https://github.com/PeteyS17/server-helloworld#"> Code Repo</a>
+                    <a href="https://server-helloworld-iit2.onrender.com"> Live Demo</a>
+                </div>
+            </div>
         </div>
 
 
