--- a/csce242/index.html
+++ b/csce242/index.html
@@ -159,6 +159,14 @@
                     <p>fixing up my Website.</p>
                 </div>
             </div>
+            <!-- Project Step 7 -->
+            <div class="card">
+                <img src="images/Screenshot 2025-10-16 at 11.40.52 PM.png" alt="Fixing up Website">
+                <div class="card-content">
+                    <h3><a href="projects/part7/about-us.html" target="_blank">Step 7: Contact Form</a></h3>
+                    <p>Added contact form.</p>
+                </div>
+            </div>
         </div>
     </main>
 
