--- a/csce242/index.html
+++ b/csce242/index.html
@@ -167,6 +167,14 @@
                     <p>Added contact form.</p>
                 </div>
             </div>
+            <!-- Project Step 8 -->
+            <div class="card">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png" alt="Fixing up Website">
+                <div class="card-content">
+                    <h3><a href="https://peteys17.github.io/beyondboaders" target="_blank">Step 8: React App</a></h3>
+                    <p>Added contact form.</p>
+                </div>
+            </div>
         </div>
     </main>
 
