--- a/csce242/index.html
+++ b/csce242/index.html
@@ -183,6 +183,16 @@
                     <h3><a href="https://github.com/PeteyS17/beyondboaders" target="_blank"> New GitHub <nav></nav></a></h3>
                 </div>
             </div>
+             <!-- Project Step 8 -->
+             <div class="card">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png" alt="Fixing up Website">
+                <div class="card-content">
+                    <h3><a href="https://peteys17.github.io/beyondboaders" target="_blank">Step 10: react server side  <nav></nav></a></h3>
+                    <h3><a href="https://github.com/PeteyS17/beyondboaders" target="_blank">  GitHub <nav></nav></a></h3>
+                    <h3><a href="https://server-destinations.onrender.com" target="_blank">server render:  <nav></nav></a></h3>
+                    <h3><a href="https://github.com/PeteyS17/server-destinations" target="_blank">  server GitHub <nav></nav></a></h3>
+                </div>
+            </div>
         </div>
     </main>
 
